# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.349 2007-02-20 08:31:39 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS HEAD (????/??/??)
 - (2007/02/15) Improved PGP decryption of files if more the one possible
    private key exists in the system and one of it is invalid (e. g. no
    configured password).
 - (2007/02/15) Fixed bug-ticket# 2007020542000593 - Queue refresh "off"
    can't be used on oracle database.
 - (2007/02/15) Add BuildSelection(). This function replaced OptionStrgHashRef(),
    OptionElement() AgentQueueListOption().
 - (2007/02/12) Added pending time selection feature for generic agent.
 - (2007/02/07) Moved to dtl block in customer ticket zoom view.
 - (2007/02/07) Moved default WebMaxFileUpload config option from 5 MB
    to 10 MB.
 - (2007/01/31) Fixed Free Field output in AgentTicketForward and
    AgentTicketPhoneOutbound.
 - (2007/01/30) Added 4 ticket freetime fields and improved freetime function.
 - (2007/01/30) Relocated valid functionality to new Valid.pm to move it
   out from Kernel/System/DB.pm.
 - (2007/01/18) Added X-OTRS-Lock and X-OTRS-FollowUp-Lock header for
    PostMaster.
 - (2007/01/17) Relocated agent preferences button.
 - (2007/01/17) Improved freetime feature, unset freetime is now possible by
    agent and customer GUI.
 - (2007/01/03) Heavy improvement of PerformanceLog feature, show detail
    view of each frontend module now.
 - (2007/01/03) Added config option for die or log is ldap/radius auth server
    is not available.
 - (2006/12/21) Improved description of Email- and Phone-Ticket in navigation.
 - (2006/12/21) Added config option to use SystemID in follow up detection or
    not (Ticket::NumberGenerator::CheckSystemID).